Fixed bugs, added DataBinding

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/firstFragment"
-        android:name="com.example.fragments.FirstFragment"
+        android:name="com.devsoc.parc.FirstFragment"
         android:label="fragment_first"
         tools:layout="@layout/fragment_first" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/secondFragment"
-        android:name="com.example.fragments.secondFragment"
+        android:name="com.devsoc.parc.secondFragment"
         android:label="fragment_second"
         tools:layout="@layout/fragment_second" >
         <action
