--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -12,12 +12,18 @@
         android:layout_height="match_parent"
         tools:context=".FirstFragment">
 
-        <TextView
-            android:id="@+id/textView2"
+        <EditText
+            android:id="@+id/editText1"
             android:layout_width="201dp"
             android:layout_height="50dp"
-            android:layout_marginTop="68dp"
-            android:text="@string/car_number"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="60dp"
+            android:hint="@string/car_number"
+            android:inputType="text"
+            android:selectAllOnFocus="true"
+            android:textColorHint="#757575"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +36,7 @@
             android:text="@string/text_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/editText1" />
 
         <EditText
             android:id="@+id/editTextPhone"
